--- a/index.html
+++ b/index.html
@@ -8,24 +8,31 @@
         body {
             margin: 0;
             display: flex;
-            width: 100vw;
-            height: 100vh;
             justify-content: center;
             align-items: center;
+
+            padding: 50px;
         }
 
         #desc {
             width: 20vw;
+            background-color: white;
+            transition: all 1s ease;
         }
-        
+
+        #desc:hover {
+            background-color: black;
+            color: white;
+        }
+
         marquee {
             font-size: 50px;
             font-family: "Comic Sans MS", "Papyrus", monospace;
         }
-        
+
         #special {
             font-weight: bold;
-            opacity: 0.1;
+            opacity: 0.2;
             font-size: 30px;
         }
 
@@ -55,10 +62,12 @@
         <div id="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus mollitia fuga quam
             consequuntur fugiat deleniti, reprehenderit magnam cum repellat, cumque numquam debitis. Fugit dolores cum,
             est mollitia odit nobis asperiores.</div>
+        <audio src="sus.mp3" controls loop></audio>
         <a id="aaaa" href="#">
             <img id="img" src="coots.jpg">
         </a>
-        <marquee id="special" scrollamount="10">Website Design by <span style="color:white">Poo Studios</span>. Movie Design by WamartO.</marquee>
+        <marquee id="special" scrollamount="10">Website Design by <span style="color:white">Poo Studios</span>. Movie
+            Design by WamartO.</marquee>
     </div>
     <script>
         // Get the anchor element
