Correct Rick Astley link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             if (randomNumber < 90) {
                 return 'https://www.youtube.com/watch?v=dQw4w9WgXcQ'; // Well-known Rick Astley song
             } else {
-                return 'https://www.youtube.com/watch?v=o5EhkBXBqHs'; // Slightly more niche Rick Astley song
+                return 'https://www.youtube.com/watch?v=yPYZpwSpKmA'; // Slightly more niche Rick Astley song
             }
         }
 
